# compose

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
compose/: Cargo.toml  all.html  fn.eval.html  fn.eval_range.html  fn.eval_source.html  fn.eval_source_range.html  index.html  sidebar-items.js  struct.SourceDiagnostic.html  struct.Warned.html  trait.World.html  type.SourceResult.html
compose-cli/: Cargo.toml
compose-cli/src/: error.rs  explain.rs  file.rs  main.rs  repl.rs  world.rs
compose-cli/src/repl/: command.rs  editor.rs  mod.rs
compose-codespan-reporting/: CHANGELOG.md  Cargo.toml
compose-codespan-reporting/examples/: custom_files.rs  peg_calculator.rs  readme_preview.rs  reusable_diagnostic.rs  term.rs
compose-codespan-reporting/src/: diagnostic.rs  files.rs  term.rs
compose-codespan-reporting/src/term/: config.rs  renderer.rs  views.rs
compose-codespan-reporting/tests/: term.rs
compose-codespan-reporting/tests/snapshots/: term__multiline_overlapping_multiline_messages__rich_ascii_no_color.snap  term__multiline_overlapping_multiline_messages__rich_color.snap  term__multiline_overlapping_multiline_messages__rich_no_color.snap  term__single_label_multiline_message__rich_ascii_no_color.snap  term__single_label_multiline_message__rich_color.snap  term__single_label_multiline_message__rich_no_color.snap  term__subdiagnostic_note_labels__rich_color.snap  term__subdiagnostic_note_labels__rich_no_color.snap  term__suggestion_add__rich_color.snap  term__suggestion_add__rich_no_color.snap  term__suggestion_many__rich_color.snap  term__suggestion_many__rich_no_color.snap  term__suggestion_multiline__rich_color.snap  term__suggestion_multiline__rich_no_color.snap  term__suggestion_multiple_lines__rich_color.snap  term__suggestion_multiple_lines__rich_no_color.snap  term__suggestion_remove__rich_color.snap  term__suggestion_remove__rich_no_color.snap  term__suggestion_replace__rich_color.snap  term__suggestion_replace__rich_no_color.snap  term__suggestion_replace_multiple__rich_color.snap  term__suggestion_replace_multiple__rich_no_color.snap
compose-codespan-reporting/tests/support/: mod.rs
compose-doc/: Cargo.toml
compose-doc/src/: block.rs  diag.rs  lib.rs  markdown.rs  realise.rs  world.rs
compose-editor/: Cargo.toml
compose-editor/src/editor/: mod.rs
compose-editor/src/renderer/: full.rs  mod.rs  styles.rs
compose-error-codes-doc-tests/: Cargo.toml  build.rs
compose-error-codes-doc-tests/src/: lib.rs
compose-explain/: Cargo.toml
compose-explain/src/: lib.rs  world.rs
compose-library/: Cargo.toml
compose-library/src/: diag.rs  engine.rs  lib.rs  repr.rs  sink.rs  vm.rs  world.rs
compose-library/src/foundations/: args.rs  array.rs  bool.rs  boxed.rs  cast.rs  func.rs  global_funcs.rs  int.rs  map.rs  mod.rs  module.rs  ops.rs  range.rs  scope.rs  str.rs  support.rs  ty.rs  unit.rs  value.rs  value_ref.rs
compose-library/src/foundations/cast/: into_result.rs  into_value.rs  mod.rs  reflect.rs
compose-library/src/foundations/global_funcs/: assertions.rs  mod.rs
compose-library/src/foundations/iterator/: array_iter.rs  iter_combinators.rs  mod.rs  range_iter.rs  string_iter.rs  take_iter.rs
compose-library/src/foundations/ops/: equality.rs  mod.rs
compose-library/src/foundations/types/: array.rs  boxed.rs  func.rs  int.rs  map.rs  mod.rs  range.rs  str.rs  ty.rs
compose-library/src/gc/: clean.rs  mod.rs  trace.rs  trigger.rs
compose-library/src/modules/json/: mod.rs
compose-syntax/: Cargo.toml
compose-syntax/src/: ast.rs  file.rs  fix.rs  kind.rs  lexer.rs  lib.rs  node.rs  parser.rs  parser_impl.rs  patch.rs  precedence.rs  scanner.rs  set.rs  source.rs  span.rs  test_utils.rs
compose-syntax/src/ast/: assignment.rs  atomics.rs  binary.rs  bindings.rs  call.rs  closure.rs  control_flow.rs  expr.rs  field_access.rs  func.rs  index_access.rs  macros.rs  map.rs  match_expression.rs  module.rs  parenthesized.rs  path_access.rs  pattern.rs  range.rs  statement.rs  unary.rs
compose-syntax/src/parser/: control_flow.rs  error_definitions.rs  expressions.rs  funcs.rs  mod.rs  parser_impl.rs  pattern.rs  patterns.rs  statements.rs
compose/cli/: index.html
compose/docs/: index.html  sidebar-items.js
compose/docs/C1_Overview/: index.html
compose/docs/C2_Variables_and_Scopes/: index.html
compose/docs/C4_Functions_and_closures/: index.html
compose/docs/basics/C2_Variables_and_Scopes/: index.html
compose/docs/basics/C4_Functions_and_closures/: index.html
compose/embedding/: index.html
compose/implementation/: index.html  sidebar-items.js
compose/implementation/eval/: fn.build_err.html  fn.eval.html  fn.eval_source.html  fn.eval_source_range.html  index.html  struct.Evaluated.html  struct.Machine.html  trait.Eval.html
compose/implementation/syntax/: enum.FixDisplay.html  enum.LabelType.html  enum.Patch.html  enum.SyntaxErrorSeverity.html  enum.SyntaxKind.html  fn.parse.html  index.html  macro.assert_ast.html  macro.assert_parse_tree.html  macro.assert_tokens.html  struct.FileId.html  struct.Fix.html  struct.FixBuilder.html  struct.Label.html  struct.Lexer.html  struct.PatchEngine.html  struct.Source.html  struct.Span.html  struct.SyntaxError.html  struct.SyntaxNode.html
compose/language/: index.html  sidebar-items.js
compose/language/C1_Overview/: index.html
compose/language/C2_Variables_and_Scopes/: index.html
compose/language/C4_Functions_and_closures/: index.html
compose/language/C5_Patterns/: index.html
compose/language/Error_Codes/: index.html
compose/src/: lib.rs
compose/src/cli/: mod.rs
compose/src/docs/: basics.rs  introduction.rs  mod.rs  patterns.rs
compose/src/embedding/: mod.rs
compose/src/implementation/: mod.rs
compose/src/language/: Error_Codes.rs  basics.rs  introduction.rs  mod.rs  patterns.rs
compose/test/: fn.assert_eval.html  fn.assert_eval_with_vm.html  fn.eval_code.html  fn.eval_code_with_vm.html  fn.print_diagnostics.html  index.html  sidebar-items.js  struct.TestResult.html  struct.TestWorld.html
(+2266 files in other folders)
