[workspace]
resolver = "3"
members = [
    "compose-cli",
    "compose-eval",
    "compose-library",
    "compose-syntax",
    "compose-editor",
    "compose-macros",
    "compose-utils",
    "compose",
    "compose-error-codes",
    "compose-doc-macros",
    "compose-doc",
    "compose-codespan-reporting"
]

default-members = [
    "compose-cli",
    "compose"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ecow = "0.2.4"
indexmap = "2.9.0"
tap = "1.0.1"
extension-traits = "2.0.0"
compose = { path = "compose" }
compose-eval = { path = "compose-eval" }
compose-library = { path = "compose-library" }
compose-macros = { path = "compose-macros" }
compose-syntax = { path = "compose-syntax" }
compose-utils = { path = "compose-utils" }
compose-error-codes = { path = "compose-error-codes" }
compose-editor = { path = "compose-editor" }
compose-doc-macros = { path = "compose-doc-macros" }
compose-doc = { path = "compose-doc" }
compose-codespan-reporting = { path = "compose-codespan-reporting" }
itertools = "0.14.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "deny"
#missing_docs = "deny" // enable this later for a full docs pass
rust_2018_idioms = { level = "warn", priority = 1 }
future_incompatible = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = 5 }
pedantic = "warn"
nursery = "warn"
#cargo = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
wildcard_dependencies = "warn"

# Overrides
unwrap_used = { level = "deny", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }


[profile.release]
lto = true
codegen-units = 1
