[package]
name = "compose-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compose"
path = "src/main.rs"

[dependencies]
compose-library = { workspace = true }
compose-eval = { workspace = true }
compose-syntax = { workspace = true }
compose-editor = { workspace = true }
compose-utils = { workspace = true }
compose = { workspace = true }
compose-explain = {workspace = true}
codespan-reporting = { workspace = true}
clap = { version = "4.5.37", features = ["derive"] }
ecow = { workspace = true }
indoc = "2.0.6"
tap = "1.0.1"
parking_lot = "0.12.3"

