[package]
name = "compose-codespan-reporting"
version = "0.12.0"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-reporting"
exclude = ["assets/**"]
edition = "2024"

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
termcolor = "1.0.4"
unicode-width = "0.2"

[dev-dependencies]
anyhow = "1"
insta = "1.6.3"
lazy_static = "1.4"
peg = "0.8.0"
rustyline = "15"
structopt = "0.3"
unindent = "0.2.3"

[features]
serialization = ["serde", "serde/rc"]
ascii-only = []
