[package]
name = "compose-editor"
version = "0.2.2"
authors = ["Avarel <avarelpm@gmail.com>"]
repository = "https://github.com/Avarel/mini-me"
homepage = "https://github.com/Avarel/mini-me"
description = "Embeddable in-line text editor."
edition = "2018"
license = "MIT"
readme = "README.md"

[features]
unstable = ["arboard"]

[dependencies]
crossterm = "=0.19"
ropey = "1.6.1"
thiserror = "2.0.12"
arboard = { version = "1.2.0", optional = true }