[package]
name = "compose-library"
version = "0.1.0"
edition = "2024"

[dependencies]
compose-syntax = { path = "../compose-syntax" }
compose-macros = { path = "../compose-macros" }
compose-utils = { path = "../compose-utils" }
ecow = { workspace = true }
indexmap = { workspace = true }
strsim = "0.11.1"
tap = { workspace = true }
