[package]
name = "compose-library"
version = "0.1.0"
edition = "2024"

[dependencies]
compose-syntax = { workspace = true }
compose-macros = { workspace = true }
compose-utils = { workspace = true }
compose-error-codes = { workspace = true }
codespan-reporting = { workspace = true }
ecow = { workspace = true }
indexmap = { workspace = true }
strsim = "0.11.1"
tap = { workspace = true }
dyn-clone = { workspace = true }
dumpster = "1.1.0"

