[package]
name = "compose-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
ecow = { workspace = true }
compose-utils = { path = "../compose-utils" }
compose-error-codes = { path = "../compose-error-codes"}
unscanny = "0.1.0"
extension-traits = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]