[package]
name = "compose"
version.workspace = true
edition.workspace = true

[dependencies]
compose-eval = { workspace = true}
compose-doc-macros = {workspace = true}
compose-error-codes-doc-tests = { workspace = true}
compose-error-codes = { workspace = true}
compose-syntax = {workspace = true}
compose-library = {workspace = true}

[lints]
workspace = true
